# cudawrappers

./: .bumpversion.cfg  .clang-format  .clang-tidy  .cmake-format.py  .codacy.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.dev.md  README.md  cuda-driver-api.md  environment.yml  gcovr.cfg  requirements.txt  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  ci-on-das.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci-on-das.yml  codacy-analysis.yml  codacy.yml  fair-software.yml  markdown-link-check.json  markdown-link-check.yml  pre-commit.yml  sonarcloud.yml
cmake/: cudawrappers-config.cmake  cudawrappers-config.cmake.in  cudawrappers-config.h.in  cudawrappers-dependencies.cmake  cudawrappers-helper.cmake  cudawrappers-inline-local-includes.cmake  cudawrappers-targets.cmake  helper.cmake  inline-common.cmake  inline-local-includes.cmake  linter-tools.cmake
cu/: cu.cc  cu.h  nvrtc.cc
docs/: conf.py  index.rst  requirements.txt
examples/vector_add/: CMakeLists.txt  Makefile  vector_add.cpp
examples/vector_add/kernels/: vector_add_kernel.cu
include/: cu.hpp  cublas.h  cufft.h  cufft.hpp  nvrtc.h  nvrtc.hpp  nvtx.hpp
include/cudawrappers/: cu.hpp  cufft.hpp  macros.h  macros.hpp  nvml.hpp  nvrtc.hpp  nvtx.hpp
old/examples/vector_add/: vector_add_kernel.cu
paper/: paper.bib  paper.md
src/: cu.cc  cu.cpp  cublas.cc  cufft.cc  cufft.cpp  nvrtc.cc  nvrtc.cpp  nvtx.cpp
tests/: CMakeLists.txt  test_cu.cpp  test_cufft.cpp  test_graph.cpp  test_nvml.cpp  test_nvrtc.cpp  test_nvtx.cpp  test_vector_add.cpp
tests/convolution/: CMakeLists.txt  convolution.cpp
tests/kernels/: params.h  primary.h  recursive_include_kernel.cu  secondary.h  single_include_kernel.cu  types.h  vector_add_kernel.cu  vector_add_kernel_recursive_include.cu  vector_add_kernel_single_include.cu
tests/vector_add/: CMakeLists.txt  vector_add.cpp  vector_add_kernel.cu
usage-examples/: README.md
usage-examples/plain-copy/cudawrappers/: README.md
